--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,17 +1,34 @@
-name: publish Docker Image
+name: Build and Push Docker Image
 
 on:
-   [workflow_dispatch]
+  push:
+    branches:
+      - main
+    tags:
+      - 'v*.*.*'
+  workflow_dispatch:
 
 jobs:
-  publish_images:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: checkout
-        uses: actions/checkout@v4
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag keroppi:latest
-      - name: push image to docker hub
-        run: 
-          docker login -u slxyyz -p ${{secrets.DOCKER_HUB_TOKEN}}
-          docker push slxyyz/keroppi:latest
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        push: true
+        tags: slxyyz/keroppi:latest
+
+    - name: Logout from Docker Hub
+      run: docker logout
