--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ discord==2.3.2
 discord.py==2.4.0
 frozenlist==1.4.1
 idna==3.10
+logging==0.4.9.6
 multidict==6.1.0
 python-dotenv==1.0.1
 requests==2.32.3
