--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,13 @@ certifi==2024.8.30
 charset-normalizer==3.3.2
 discord==2.3.2
 discord.py==2.4.0
+docker==7.1.0
 frozenlist==1.4.1
 idna==3.10
 logging==0.4.9.6
 multidict==6.1.0
 python-dotenv==1.0.1
+pywin32==306
 requests==2.32.3
 urllib3==2.2.3
 yarl==1.11.1
