--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ idna==3.10
 logging==0.4.9.6
 multidict==6.1.0
 python-dotenv==1.0.1
-pywin32==306
+pywin32==306; platform_system == "Windows"
 requests==2.32.3
 urllib3==2.2.3
 yarl==1.11.1
