--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
+aiohappyeyeballs==2.4.2
+aiohttp==3.10.8
 aiosignal==1.3.1
 asyncio==3.4.3
 attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
-discord==2.3.2
 discord.py==2.4.0
 docker==7.1.0
 frozenlist==1.4.1
 idna==3.10
-logging==0.4.9.6
 multidict==6.1.0
-python-dotenv==1.0.1
-pywin32==306; platform_system == "Windows"
 requests==2.32.3
 urllib3==2.2.3
-yarl==1.11.1
+yarl==1.13.1
+
+# only needed when running on Windows
+pywin32==306; platform_system == "Windows"
