--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,8 @@ docker==7.1.0
 frozenlist==1.4.1
 idna==3.10
 multidict==6.1.0
+python-dotenv==1.0.1
+pywin32==306; platform_system == "Windows"
 requests==2.32.3
 urllib3==2.2.3
 yarl==1.13.1
-
-# only needed when running on Windows
-pywin32==306; platform_system == "Windows"
