--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,15 @@ aiohttp==3.10.8
 aiosignal==1.3.1
 asyncio==3.4.3
 attrs==24.2.0
-certifi==2024.8.30
 charset-normalizer==3.3.2
 discord.py==2.4.0
 docker==7.1.0
 frozenlist==1.4.1
 idna==3.10
 multidict==6.1.0
+paramiko==3.5.0
+pycparser==2.22
+PyNaCl==1.5.0
 python-dotenv==1.0.1
 pywin32==306; platform_system == "Windows"
 requests==2.32.3
