--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,10 @@ docker==7.1.0
 frozenlist==1.4.1
 idna==3.10
 multidict==6.1.0
-paramiko==3.5.0
 pycparser==2.22
 PyNaCl==1.5.0
 python-dotenv==1.0.1
-pywin32==306; platform_system == "Windows"
+pywin32==306
 requests==2.32.3
 urllib3==2.2.3
 yarl==1.13.1
