--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ multidict==6.1.0
 pycparser==2.22
 PyNaCl==1.5.0
 python-dotenv==1.0.1
-pywin32==306
+pywin32==306; platform_system == "Windows"
 requests==2.32.3
 urllib3==2.2.3
 yarl==1.13.1
