added missing manage_container function in container cog. switched to using .env file for command prefix and tomezone updated example compose file updated requirements.txt updated some dependencies started to implement usage of {command_prefix} variable thoughout help help messages

--- a/compose.yml
+++ b/compose.yml
@@ -7,4 +7,6 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       DISCORD_TOKEN: ${DISCORD_TOKEN}
+      COMMAND_PREFIX: ${COMMAND_PREFIX}
+      TIMEZONE: ${TIMEZONE}
     restart: unless-stopped
