--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ multidict==6.1.0
 pycparser==2.22
 PyNaCl==1.5.0
 python-dotenv==1.0.1
+pytz==2024.2
 pywin32==306; platform_system == "Windows"
 requests==2.32.3
 urllib3==2.2.3
