--- a/compose.yml
+++ b/compose.yml
@@ -1,12 +1,12 @@
 services:
   discord_bot:
     image: slxyyz/keroppi:latest
-    container_name: Your desired Bot name
+    container_name: Discord-Bot
     volumes:
-      - /mnt/user/appdata/keroppi/config:/app/config
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /Path/To/Your/config:/app/config  # Replace with the absolute path to your config directory
+      - /var/run/docker.sock:/var/run/docker.sock  # Allows bot to interact with Docker
     environment:
-      DISCORD_TOKEN: ${DISCORD_TOKEN}
-      COMMAND_PREFIX: ${COMMAND_PREFIX}
-      TIMEZONE: ${TIMEZONE}
+      DISCORD_TOKEN: ${DISCORD_TOKEN}   # set in .env
+      COMMAND_PREFIX: ${COMMAND_PREFIX} # set in .env
+      TIMEZONE: ${TIMEZONE}             # set in .env
     restart: unless-stopped
